[package]
name = "rainyday"
version = "0.0.1"
authors = ["jmcph4 <jmcph4.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
